--- a/TUT25_Hands_on_part_II_with_solutions.ipynb
+++ b/TUT25_Hands_on_part_II_with_solutions.ipynb
@@ -5,11 +5,9 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "qHOL4o_aXG1e",
         "04XpalIMsZ8U",
         "k_YIhAW-tHC2"
-      ],
-      "toc_visible": true
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -130,7 +128,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "09edc7f4-5c08-46e4-87b8-c13f57ac6df3"
+        "outputId": "09edc7f4-5c08-46e4-87b8-c13f57ac6df3",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": [
@@ -159,12 +158,11 @@
       "source": [
         "#@title Solution\n",
         "\n",
-        "# Strings are intrinsically inefficient for that purpose: they are made to store characters.\n",
-        "# In Python strings are unicode, one character uses a minumum of 1 byte, that is 8 bits.\n",
+        "# Strings are intrinsically inefficient for that purpose: they are made to store all characters.\n",
+        "# In Python, strings are unicode, one character uses a minumum of 1 byte, that is 8 bits.\n",
         "# Storing bits in a string is therefore very wasteful in terms of memory space.\n",
         "# A better alternative is to implement a proper bitset data structure, or to use\n",
-        "# ad-hoc integers with bitmasks and bitwise operations to do this.\n",
-        "# For instance, 9 corresponds to the ket \"1001\"."
+        "# ad-hoc integers with bitmasks and bitwise operations to do this."
       ],
       "metadata": {
         "id": "0c3OYJBKK3sc",
@@ -270,7 +268,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4. Let's try to apply a gate to our sparse state vectors. For now we will only care about single-qubit gates. Write a Python function `apply(num_qubits, state_vector, matrix, operand)` which returns a new state vector, result of the application of `matrix` to `state_vector`.\n",
+        "4. Let's try to apply a gate to our sparse state vectors. We will only care about single-qubit gates. Write a Python function `apply(num_qubits, state_vector, matrix, operand)` which returns a new state vector, result of the application of `matrix` to `state_vector`.\n",
         "\n",
         "Note: we don't have to assume that the state vector is a proper quantum state vector, that is, that the sum of the squared modulus of the amplitudes is equal to 1. We also don't have to assume that the matrices are unitary. Your function should work in any case."
       ],
@@ -285,7 +283,7 @@
         "import numpy as np\n",
         "\n",
         "def apply(num_qubits: int, state_vector: dict[str, complex], matrix: np.ndarray, operand: int):\n",
-        "  \"\"\"Given a `state_vector` describing a quantum computer containing `num_qubits`, apply gate given by\n",
+        "  \"\"\"Given a `state_vector` describing a quantum state of `num_qubits` qubits, applies the gate given by\n",
         "    `matrix` to qubit index `operand`. Returns the new state vector after that gate application.\"\"\"\n",
         "  assert(matrix.shape == (2, 2))                                                         # Check that the input matrix is square 2x2\n",
         "  assert(all(len(ket) == num_qubits for ket in state_vector.keys()))                     # Check that the input state vector dictionary is well-formed\n",
@@ -299,7 +297,7 @@
       "metadata": {
         "id": "8XRp7php6u6i"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -335,15 +333,16 @@
         "  return result"
       ],
       "metadata": {
-        "id": "jgx2GLA4GQaC"
+        "id": "jgx2GLA4GQaC",
+        "cellView": "form"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "You can check your `apply` function by running the cell below."
+        "You can verify that your `apply` function works correctly by running the cell below. If it does not, you'll get an error message with context."
       ],
       "metadata": {
         "id": "Ce-uBBPr8X2G"
@@ -396,7 +395,7 @@
       "metadata": {
         "id": "nKDlZ6JC8czR"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -418,7 +417,8 @@
         "# due to floating-point arithmetic)."
       ],
       "metadata": {
-        "id": "PVaKkOksMBvs"
+        "id": "PVaKkOksMBvs",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -441,7 +441,8 @@
         "# and insert/add amplitudes for as many kets as their are lines in the matrix..."
       ],
       "metadata": {
-        "id": "LFjuKbeoMURV"
+        "id": "LFjuKbeoMURV",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -469,74 +470,202 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install qxelarator\n",
-        "import qxelarator\n",
-        "\n",
-        "!pip install qiskit qiskit-aer\n",
+        "!pip install qxelarator qiskit qiskit-aer\n",
+        "import qxelarator, time, zipfile\n",
         "from qiskit import execute, QuantumCircuit, Aer, transpile\n",
-        "import time\n",
-        "import zipfile\n",
         "\n",
-        "with zipfile.ZipFile('/content/QuantumAlgorithms.zip', 'r') as zip_ref:\n",
-        "    zip_ref.extractall('/content/extracted_folder')"
+        "# with zipfile.ZipFile('/content/QuantumAlgorithms.zip', 'r') as zip_ref:\n",
+        "#     zip_ref.extractall('/content/extracted_folder')"
       ],
       "metadata": {
         "id": "FIc1A7OL0d75",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "30c3d6b3-0745-478d-a822-f69e633d39b2"
+        "outputId": "de5b3d46-a6cd-4f8d-ad8e-2c8fc0a0c6a9"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting qxelarator\n",
-            "  Downloading qxelarator-0.6.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.4 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.4/4.4 MB\u001b[0m \u001b[31m12.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: qxelarator\n",
-            "Successfully installed qxelarator-0.6.2\n",
-            "Collecting qiskit\n",
-            "  Downloading qiskit-0.44.1-py3-none-any.whl (8.2 kB)\n",
-            "Collecting qiskit-aer\n",
-            "  Downloading qiskit_aer-0.12.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (12.8 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m59.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting qiskit-terra==0.25.1 (from qiskit)\n",
-            "  Downloading qiskit_terra-0.25.1-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (6.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.1/6.1 MB\u001b[0m \u001b[31m66.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting rustworkx>=0.13.0 (from qiskit-terra==0.25.1->qiskit)\n",
-            "  Downloading rustworkx-0.13.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.0 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.0/2.0 MB\u001b[0m \u001b[31m82.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.10/dist-packages (from qiskit-terra==0.25.1->qiskit) (1.23.5)\n",
-            "Collecting ply>=3.10 (from qiskit-terra==0.25.1->qiskit)\n",
-            "  Downloading ply-3.11-py2.py3-none-any.whl (49 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.6/49.6 kB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: psutil>=5 in /usr/local/lib/python3.10/dist-packages (from qiskit-terra==0.25.1->qiskit) (5.9.5)\n",
+            "Requirement already satisfied: qxelarator in /usr/local/lib/python3.10/dist-packages (0.6.4)\n",
+            "Requirement already satisfied: qiskit in /usr/local/lib/python3.10/dist-packages (0.44.1)\n",
+            "Requirement already satisfied: qiskit-aer in /usr/local/lib/python3.10/dist-packages (0.12.2)\n",
+            "Requirement already satisfied: qiskit-terra==0.25.1 in /usr/local/lib/python3.10/dist-packages (from qiskit) (0.25.1)\n",
+            "Requirement already satisfied: rustworkx>=0.13.0 in /usr/local/lib/python3.10/dist-packages (from qiskit-terra==0.25.1->qiskit) (0.13.1)\n",
+            "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.10/dist-packages (from qiskit-terra==0.25.1->qiskit) (1.23.5)\n",
+            "Requirement already satisfied: ply>=3.10 in /usr/local/lib/python3.10/dist-packages (from qiskit-terra==0.25.1->qiskit) (3.11)\n",
+            "Requirement already satisfied: psutil>=5 in /usr/local/lib/python3.10/dist-packages (from qiskit-terra==0.25.1->qiskit) (5.9.5)\n",
             "Requirement already satisfied: scipy>=1.5 in /usr/local/lib/python3.10/dist-packages (from qiskit-terra==0.25.1->qiskit) (1.11.2)\n",
             "Requirement already satisfied: sympy>=1.3 in /usr/local/lib/python3.10/dist-packages (from qiskit-terra==0.25.1->qiskit) (1.12)\n",
-            "Collecting dill>=0.3 (from qiskit-terra==0.25.1->qiskit)\n",
-            "  Downloading dill-0.3.7-py3-none-any.whl (115 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m115.3/115.3 kB\u001b[0m \u001b[31m13.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: python-dateutil>=2.8.0 in /usr/local/lib/python3.10/dist-packages (from qiskit-terra==0.25.1->qiskit) (2.8.2)\n",
-            "Collecting stevedore>=3.0.0 (from qiskit-terra==0.25.1->qiskit)\n",
-            "  Downloading stevedore-5.1.0-py3-none-any.whl (49 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.6/49.6 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting symengine<0.10,>=0.9 (from qiskit-terra==0.25.1->qiskit)\n",
-            "  Downloading symengine-0.9.2-cp310-cp310-manylinux2010_x86_64.whl (37.5 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m37.5/37.5 MB\u001b[0m \u001b[31m24.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: typing-extensions in /usr/local/lib/python3.10/dist-packages (from qiskit-terra==0.25.1->qiskit) (4.5.0)\n",
+            "Requirement already satisfied: dill>=0.3 in /usr/local/lib/python3.10/dist-packages (from qiskit-terra==0.25.1->qiskit) (0.3.7)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.0 in /usr/local/lib/python3.10/dist-packages (from qiskit-terra==0.25.1->qiskit) (2.8.2)\n",
+            "Requirement already satisfied: stevedore>=3.0.0 in /usr/local/lib/python3.10/dist-packages (from qiskit-terra==0.25.1->qiskit) (5.1.0)\n",
+            "Requirement already satisfied: symengine<0.10,>=0.9 in /usr/local/lib/python3.10/dist-packages (from qiskit-terra==0.25.1->qiskit) (0.9.2)\n",
+            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.10/dist-packages (from qiskit-terra==0.25.1->qiskit) (4.5.0)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.8.0->qiskit-terra==0.25.1->qiskit) (1.16.0)\n",
-            "Collecting pbr!=2.1.0,>=2.0.0 (from stevedore>=3.0.0->qiskit-terra==0.25.1->qiskit)\n",
-            "  Downloading pbr-5.11.1-py2.py3-none-any.whl (112 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m112.7/112.7 kB\u001b[0m \u001b[31m12.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.10/dist-packages (from sympy>=1.3->qiskit-terra==0.25.1->qiskit) (1.3.0)\n",
-            "Installing collected packages: ply, symengine, rustworkx, pbr, dill, stevedore, qiskit-terra, qiskit-aer, qiskit\n",
-            "Successfully installed dill-0.3.7 pbr-5.11.1 ply-3.11 qiskit-0.44.1 qiskit-aer-0.12.2 qiskit-terra-0.25.1 rustworkx-0.13.1 stevedore-5.1.0 symengine-0.9.2\n"
+            "Requirement already satisfied: pbr!=2.1.0,>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from stevedore>=3.0.0->qiskit-terra==0.25.1->qiskit) (5.11.1)\n",
+            "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.10/dist-packages (from sympy>=1.3->qiskit-terra==0.25.1->qiskit) (1.3.0)\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Circuits\n",
+        "wow_qx = \"\"\"\n",
+        "version 1.0\n",
+        "\n",
+        "qubits 64\n",
+        "h q[0];\n",
+        "cnot q[0], q[1];\n",
+        "cnot q[0], q[2];\n",
+        "cnot q[0], q[3];\n",
+        "cnot q[0], q[4];\n",
+        "cnot q[0], q[5];\n",
+        "cnot q[0], q[6];\n",
+        "cnot q[0], q[7];\n",
+        "cnot q[0], q[8];\n",
+        "cnot q[0], q[9];\n",
+        "cnot q[0], q[10];\n",
+        "cnot q[0], q[11];\n",
+        "cnot q[0], q[12];\n",
+        "cnot q[0], q[13];\n",
+        "cnot q[0], q[14];\n",
+        "cnot q[0], q[15];\n",
+        "cnot q[0], q[16];\n",
+        "cnot q[0], q[17];\n",
+        "cnot q[0], q[18];\n",
+        "cnot q[0], q[19];\n",
+        "cnot q[0], q[20];\n",
+        "cnot q[0], q[21];\n",
+        "cnot q[0], q[22];\n",
+        "cnot q[0], q[23];\n",
+        "cnot q[0], q[24];\n",
+        "cnot q[0], q[25];\n",
+        "cnot q[0], q[26];\n",
+        "cnot q[0], q[27];\n",
+        "cnot q[0], q[28];\n",
+        "cnot q[0], q[29];\n",
+        "cnot q[0], q[30];\n",
+        "cnot q[0], q[31];\n",
+        "cnot q[0], q[32];\n",
+        "cnot q[0], q[33];\n",
+        "cnot q[0], q[34];\n",
+        "cnot q[0], q[35];\n",
+        "cnot q[0], q[36];\n",
+        "cnot q[0], q[37];\n",
+        "cnot q[0], q[38];\n",
+        "cnot q[0], q[39];\n",
+        "cnot q[0], q[40];\n",
+        "cnot q[0], q[41];\n",
+        "cnot q[0], q[42];\n",
+        "cnot q[0], q[43];\n",
+        "cnot q[0], q[44];\n",
+        "cnot q[0], q[45];\n",
+        "cnot q[0], q[46];\n",
+        "cnot q[0], q[47];\n",
+        "cnot q[0], q[48];\n",
+        "cnot q[0], q[49];\n",
+        "cnot q[0], q[50];\n",
+        "cnot q[0], q[51];\n",
+        "cnot q[0], q[52];\n",
+        "cnot q[0], q[53];\n",
+        "cnot q[0], q[54];\n",
+        "cnot q[0], q[55];\n",
+        "cnot q[0], q[56];\n",
+        "cnot q[0], q[57];\n",
+        "cnot q[0], q[58];\n",
+        "cnot q[0], q[59];\n",
+        "cnot q[0], q[60];\n",
+        "cnot q[0], q[61];\n",
+        "cnot q[0], q[62];\n",
+        "cnot q[0], q[63];\n",
+        "\"\"\"\n",
+        "\n",
+        "wow_qiskit = \"\"\"\n",
+        "OPENQASM 2.0;\n",
+        "include \"qelib1.inc\";\n",
+        "qreg q[64];\n",
+        "\n",
+        "h q[0];\n",
+        "cx q[0], q[1];\n",
+        "cx q[0], q[2];\n",
+        "cx q[0], q[3];\n",
+        "cx q[0], q[4];\n",
+        "cx q[0], q[5];\n",
+        "cx q[0], q[6];\n",
+        "cx q[0], q[7];\n",
+        "cx q[0], q[8];\n",
+        "cx q[0], q[9];\n",
+        "cx q[0], q[10];\n",
+        "cx q[0], q[11];\n",
+        "cx q[0], q[12];\n",
+        "cx q[0], q[13];\n",
+        "cx q[0], q[14];\n",
+        "cx q[0], q[15];\n",
+        "cx q[0], q[16];\n",
+        "cx q[0], q[17];\n",
+        "cx q[0], q[18];\n",
+        "cx q[0], q[19];\n",
+        "cx q[0], q[20];\n",
+        "cx q[0], q[21];\n",
+        "cx q[0], q[22];\n",
+        "cx q[0], q[23];\n",
+        "cx q[0], q[24];\n",
+        "cx q[0], q[25];\n",
+        "cx q[0], q[26];\n",
+        "cx q[0], q[27];\n",
+        "cx q[0], q[28];\n",
+        "cx q[0], q[29];\n",
+        "cx q[0], q[30];\n",
+        "cx q[0], q[31];\n",
+        "cx q[0], q[32];\n",
+        "cx q[0], q[33];\n",
+        "cx q[0], q[34];\n",
+        "cx q[0], q[35];\n",
+        "cx q[0], q[36];\n",
+        "cx q[0], q[37];\n",
+        "cx q[0], q[38];\n",
+        "cx q[0], q[39];\n",
+        "cx q[0], q[40];\n",
+        "cx q[0], q[41];\n",
+        "cx q[0], q[42];\n",
+        "cx q[0], q[43];\n",
+        "cx q[0], q[44];\n",
+        "cx q[0], q[45];\n",
+        "cx q[0], q[46];\n",
+        "cx q[0], q[47];\n",
+        "cx q[0], q[48];\n",
+        "cx q[0], q[49];\n",
+        "cx q[0], q[50];\n",
+        "cx q[0], q[51];\n",
+        "cx q[0], q[52];\n",
+        "cx q[0], q[53];\n",
+        "cx q[0], q[54];\n",
+        "cx q[0], q[55];\n",
+        "cx q[0], q[56];\n",
+        "cx q[0], q[57];\n",
+        "cx q[0], q[58];\n",
+        "cx q[0], q[59];\n",
+        "cx q[0], q[60];\n",
+        "cx q[0], q[61];\n",
+        "cx q[0], q[62];\n",
+        "cx q[0], q[63];\n",
+        "\n",
+        "\n",
+        "\n",
+        "\"\"\""
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "IMhD7mYmcGRh"
+      },
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -554,16 +683,13 @@
     {
       "cell_type": "code",
       "source": [
-        "#QX\n",
-        "with open(\"/content/extracted_folder/QuantumAlgorithms/cqasm/wow.qasm\", \"r\") as file:\n",
-        "    content = file.read()\n",
-        "    elapsed = time.time()\n",
-        "    result = qxelarator.execute_string(content)\n",
+        "elapsed = time.time()\n",
+        "result = qxelarator.execute_string(wow_qx)\n",
+        "print(result)\n",
         "print(\"--- %s seconds Elapsed time QX---\" % (time.time() - elapsed))\n",
-        "# result\n",
         "\n",
-        "#Qiskit\n",
-        "qc = QuantumCircuit.from_qasm_file(\"/content/extracted_folder/QuantumAlgorithms/openqasm/wow.qasm\") # quantum_volume_15\n",
+        "\n",
+        "qc = QuantumCircuit.from_qasm_str(wow_qiskit)\n",
         "elapsed = time.time()\n",
         "simulator = Aer.get_backend(\"statevector_simulator\") # qasm_simulator, statevector_simulator\n",
         "# Transpile the circuit for the simulator\n",
@@ -581,7 +707,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "508211d7-fb43-44bf-a808-dbe2fbc44fb8"
+        "outputId": "fa0e12c1-1dec-4ac9-b1e0-b556a9e13cc4"
       },
       "execution_count": null,
       "outputs": [
@@ -589,7 +715,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--- 0.02855062484741211 seconds Elapsed time QX---\n"
+            "Shots requested: 1\n",
+            "Shots done: 1\n",
+            "Results: {'0000000000000000000000000000000000000000000000000000000000000000': 1}\n",
+            "State: {'0000000000000000000000000000000000000000000000000000000000000000': (0.7071067811865475+0j), '1111111111111111111111111111111111111111111111111111111111111111': (0.7071067811865475+0j)}\n",
+            "--- 0.0239713191986084 seconds Elapsed time QX---\n"
           ]
         }
       ]
