Add link to QI knowledge base

--- a/TUT25_Hands_on_part_I_with_solutions.ipynb
+++ b/TUT25_Hands_on_part_I_with_solutions.ipynb
@@ -263,6 +263,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "At any time, you can check the supported gates in the simulator in the Quantum Inspire knowledge base: for instance the prep_z instruction https://www.quantum-inspire.com/kbase/prep-z/ (other gates are in the column on the left)."
+      ],
+      "metadata": {
+        "id": "HrDcSQd3X4Tn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Let's now start with some exercises!"
       ],
       "metadata": {
